@@ -15,6 +15,7 @@ PHP                                                                        NEWS
   . Fixed zend call stack size for macOs/arm64. (David Carlier)
   . Added support for Zend Max Execution Timers on FreeBSD. (Kévin Dunglas)
   . Ensure fiber stack is not backed by THP. (crrodriguez)
+  . Implement GH-13609 (Dump wrapped object in WeakReference class). (nielsdos)
 
 - Curl:
   . Deprecated the CURLOPT_BINARYTRANSFER constant. (divinity76)
